--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
@@ -21,9 +21,9 @@ The following table provides information on the installation packages for each c
        <td>Contact OceanBase Technical Support to obtain the latest OCP Docker image. </td>
    </tr>
    <tr>
-       <td>OBServer Docker image</td>
+       <td>MetaDB Docker image</td>
        <td>This image is used to deploy the OCP MetaDB and MonitorDB. </td>
-       <td>Contact OceanBase Technical Support to obtain the latest OBServer Docker image. </td>
+       <td>Contact OceanBase Technical Support to obtain the latest MetaDB Docker image. </td>
    </tr>
    <tr>
    <tr>
@@ -32,17 +32,17 @@ The following table provides information on the installation packages for each c
        <td>Contact OceanBase Technical Support to obtain the latest OceanBase RPM package. </td>
    </tr>
    <tr>
-       <td>ODP RPM package</td>
+       <td>OceanBase Database Proxy (ODP) RPM package</td>
        <td>This package is used to deploy ODP. </td>
        <td>Contact OceanBase Technical Support to obtain the latest ODP RPM package. </td>
    </tr>
    <tr>
-       <td>OMS Docker image (optional)</td>
+       <td>(Optional) OMS Docker image</td>
        <td>This image is used to deploy OMS. </td>
        <td>Contact OceanBase Technical Support to obtain the latest OMS Docker image. </td>
    </tr>
    <tr>
-       <td>ODC Docker image (optional)</td>
+       <td>(Optional) ODC Docker image</td>
        <td>This image is used to deploy ODC. </td>
        <td>Contact OceanBase Technical Support to obtain the latest ODC Docker image. </td>
    </tr>
