--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
@@ -4,7 +4,7 @@ This topic describes how to deploy OceanBase Admin Toolkit (OAT).
 
 ## Prerequisites
 
-Install Docker CE 17.03 or later on your server.
+Docker CE 17.03 or later is installed on your server.
 
 ## Procedure
 
