--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/2.verify-after-deployment-oat-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/2.verify-after-deployment-oat-graphical.md
@@ -19,4 +19,4 @@ After you deploy OceanBase Admin Toolkit (OAT), you need to log on to OAT to che
      <p>Contact OceanBase Technical Support to obtain the default password of the admin account. To ensure account security, change the password upon the first logon. </p>
    </main>
 
-   <!-- ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9077796061/p187569.png "image.png") -->
+   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9077796061/p187569.png "image.png")
