--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/3.configure-clock-source-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/3.configure-clock-source-graphical.md
@@ -4,7 +4,7 @@ OceanBase products have implicit relationships in time. Therefore, the physical 
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>The clocks of servers in the OceanBase cluster must be synchronized. Otherwise, the OceanBase cluster may not start or will encounter operational exceptions. A physical server is synchronous with the clock source server when the clock offset between them is 50 ms or lower. The tolerable clock offset of an OceanBase cluster cannot exceed 100 ms. When the clock offset exceeds 100 ms, the cluster may become leaderless. You can synchronize the clock and restart the OceanBase cluster to restore it to normal. If you have already configured the Network Time Protocol (NTP) clock source, no need to do it again. </p>
+    <p>OceanBase Database V4.1 allows for a time deviation limit of up to 2 seconds. Moreover, this version supports dynamic clock modification with no effect on the accuracy of data or stability of a cluster.</p>
   </main>
 
 ## Prerequisites
@@ -74,7 +74,7 @@ Perform the following steps to configure the NTP clock source.
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>If the NTP service has just been started, you need to wait for a moment before running the `ntpstat` command. </p>
+    <p>If the NTP service has just been started, you need to wait for a moment before running the <code>ntpstat</code> command. </p>
   </main>
 
 ```shell
@@ -109,7 +109,7 @@ Parameters in the result of the `ntpq` command:
 
 6. (Optional) Perform manual synchronization.
 
-   If the time deviation is always great, you can use the `ntpdate` command to manually correct the time. This conflicts with the automatic synchronization service. Therefore, before you manually correct the time, you need to stop the NTP service first.
+   If you notice a significant time deviation, you can manually correct it by using the `ntpdate` command. However, this method conflicts with automatic synchronization services and requires stopping the NTP service first.
 
    ```shell
    [root@xxx /]# systemctl stop ntpd
