--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/4.upload-the-installation-package-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/4.upload-the-installation-package-graphical.md
@@ -10,7 +10,7 @@ To obtain installation packages of the required versions, contact OceanBase Tech
 
 * To deploy OCP, you must upload the OCP Docker image and the OBServer Docker image to the server where OAT is installed.
 
-   In the following command, `oat_server` indicates the IP address of the server where OAT is installed.
+   In the following commands, `oat_server` indicates the IP address of the server where OAT is installed.
 
    ```shell
    [root@hostname /]# scp ./ocp.tar <oat_server>:/oat/data_dir/images/ocp.tar
@@ -27,7 +27,7 @@ To obtain installation packages of the required versions, contact OceanBase Tech
 
 * To deploy OMS, you need to upload the images of OMS and InfluxDB to the server where OAT is installed.
 
-   In the following command, `oat_server` indicates the IP address of the server where OAT is installed.
+   In the following commands, `oat_server` indicates the IP address of the server where OAT is installed.
 
    ```shell
    [root@hostname /]# scp ./oms.tar <oat_server>:/oat/data_dir/images/oms.tar
@@ -36,7 +36,7 @@ To obtain installation packages of the required versions, contact OceanBase Tech
 
 * To deploy ODP, you need to upload the images of the ODP console and ODP server to the server where OAT is installed.
 
-   In the following command, `oat_server` indicates the IP address of the server where OAT is installed.
+   In the following commands, `oat_server` indicates the IP address of the server where OAT is installed.
 
    ```shell
    [root@hostname /]# scp ./console.tar <oat_server>:/oat/data_dir/images/console.tar
