--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/5.add-server.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/5.add-server.md
@@ -42,7 +42,7 @@ Before you deploy OceanBase Cloud Platform (OCP), you must add a server to the s
 
    <main id="notice" type='explain'>
      <h4>Note</h4>
-     <p>If you do not configure **Initialize Configuration**, the server may fail to deploy various services associated with OceanBase Database. We recommend that you disable **Initialize Configuration** only in component or product takeover scenarios. </p>
+     <p>If you do not configure <strong>Initialize Configuration</strong>, the server may fail to deploy various services associated with OceanBase Database. We recommend that you disable <strong>Initialize Configuration</strong> only in component or product takeover scenarios. </p>
    </main>
 
    | Field | Description |
