--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/6.edit-the-server.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/6.edit-the-server.md
@@ -6,8 +6,8 @@ After you initialize a server, you can change its IDC, SSH access port, and cred
 
 Before you edit a server, ensure that:
 
-* You have installed and logged on to OceanBase Admin Toolkit (OAT) as a super administrator or an O&M engineer.
-* You have added the server, and the server has been initialized and is in the **Running** state.
+* You have installed OceanBase Admin Toolkit (OAT) and logged on as either a super administrator or an O&M engineer.
+* The server you want to edit has been added, initialized, and is currently in the **Running** state.
 
 ## Procedure
 
