--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/7.create-metadb.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/7.create-metadb.md
@@ -54,9 +54,9 @@ Before you create MetaDB, ensure that:
    |------|------|
    | MySQL Port | The MySQL port of MetaDB. Default value: `2881`.  |
    | RPC Port | The RPC port of MetaDB. Default value: `2882`.  |
-   | OB Process Startup Parameters (Optional) | You can modify or add the startup parameters of the OceanBase process as needed.  |
+   | OB Process Startup Parameters | You can modify or add the startup parameters of the OceanBase process as needed. This parameter is optional.  |
    | ODP Service Port | The service port of the OceanBase Database Proxy (ODP). Default value: `2883`.  |
-   | OBProxy Startup Parameters | You can modify or add the startup parameters of the obproxy process as needed. This parameter is optional. For more information, see [Parameter description](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784).  |
+   | OBProxy Startup Parameters | You can modify or add the startup parameters of the obproxy process as needed. This parameter is optional. <!-- For more information, see [Parameter description](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784). -->  | 
    | SSHD Port | The SSHD port in the MetaDB container. Default value: `2022`. OceanBase Cloud Platform (OCP) deploys the OCP Agent by connecting to the SSHD port.  |
    | root Password | The password of the root user in the MetaDB container.  |
 
@@ -64,6 +64,6 @@ Before you create MetaDB, ensure that:
 
    You can also click **Reset** to restore the default configurations. 
 
-## Subsequent operations
+## What to do next
 
 After you install MetaDB, you can install the OceanBase ecosystem tools, including OCP, OceanBase Developer Center (ODC), OceanBase Migration Service (OMS), and OB Sharding. 
