--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/1.deployment-instructions-ocp-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/1.deployment-instructions-ocp-graphical.md
@@ -1,26 +1,26 @@
 # Overview
 
-OceanBase Cloud Platform (OCP) runs in a Docker container. OCP and OceanBase Database have the same requirements on the server architecture and Linux OS.
+OceanBase Cloud Platform (OCP) is a management platform for OceanBase Database and lets you install, upgrade, scale up, and uninstall clusters with ease. It is compatible with all major versions of the database and can manage essential resources such as hosts, networks, and software packages.
+
+OCP is deployed in a Docker container and has the same server architecture and Linux OS requirements as OceanBase Database.
 
 ## About OCP
 
-OCP is an enterprise-level database management platform for OceanBase Database. You can install, upgrade, scale up, and uninstall OceanBase Database clusters, create and manage maintenance tasks, monitor the cluster running status, and view alerts in OCP with a few clicks.
+With OCP, you can perform O&M tasks, check the running status of your cluster, and view alerts with just a few clicks. Additionally, it offers full-lifecycle management for OceanBase clusters and tenants, leading to more efficient cluster management and reduced IT O&M costs.
 
-OCP supports all major versions of OceanBase Database and the full-lifecycle management of components such as OceanBase clusters and OceanBase Database tenants. It manages OceanBase Database resources such as hosts, networks, and software packages. You can use OCP to manage OceanBase clusters more efficiently at reduced IT O&M costs.
-
-OCP supports two deployment modes: single-node deployment and high-availability deployment.
+OCP comes with two deployment modes: single-node deployment and high-availability deployment.
 
 ## Single-node deployment
 
-In single-node deployment, all features of OCP are deployed on one node, including OCP-Server, MetaDB, MonitorDB, and OBProxy.
+In this deployment mode, all features of OCP, including OCP-Server, MetaDB, MonitorDB, and OBProxy, are deployed on one node.
 
 This deployment mode has the following benefits:
 
-All services are deployed on one host, which minimizes the required resources.
+- All services are deployed on one host, which minimizes the required resources.
 
-All requests are handled on one host without distributed processing, which facilitates log lookup and debugging.
+- All requests are handled on one host without distributed processing, which facilitates log lookup and debugging.
 
-In deployment mode, OCP depends on fewer services and does not require server load balancing.
+- In this deployment mode, OCP depends on fewer services and does not require server load balancing.
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
