--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/4.sql-performance-analysis-example/1.analyze-events-waiting-in-a-query-using-sql-audit.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/4.sql-performance-analysis-example/1.analyze-events-waiting-in-a-query-using-sql-audit.md
@@ -20,16 +20,16 @@ obclient> SELECT SQL_ID, ELAPSED_TIME, QUEUE_TIME, GET_PLAN_TIME, EXECUTE_TIME,
 
 ************************** 1. row ***************************
                SQL_ID: CAFC81EE933820AEC5A86CBBAC1D0F6D
-         ELAPSED_TIME: 2168
-           QUEUE_TIME: 33
-        GET_PLAN_TIME: 276
-         EXECUTE_TIME: 1826
+         ELAPSED_TIME: 953
+           QUEUE_TIME: 18
+        GET_PLAN_TIME: 58
+         EXECUTE_TIME: 867
 APPLICATION_WAIT_TIME: 0
 CONCURRENCY_WAIT_TIME: 0
-    USER_IO_WAIT_TIME: 0
+    USER_IO_WAIT_TIME: 550
         SCHEDULE_TIME: 0
-                EVENT: sync rpc
-           WAIT_CLASS: NETWORK
-      WAIT_TIME_MICRO: 1596
-TOTAL_WAIT_TIME_MICRO: 1596
+                EVENT: db file data index read
+           WAIT_CLASS: USER_IO
+      WAIT_TIME_MICRO: 352
+TOTAL_WAIT_TIME_MICRO: 550
 ```
