修改 8.run-oracle.md

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/7.dbms-job-oracle/8.run-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/7.dbms-job-oracle/8.run-oracle.md
@@ -36,7 +36,7 @@ force     IN  BOOLEAN DEFAULT FALSE);
 -----------------------
 
 ```sql
-EXECUTE DBMS_JOB.RUN(10100);
+CALL DBMS_JOB.RUN(10100);
 ```
 
 
