--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/8.custom-data-types-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/8.custom-data-types-of-oracle-mode.md
@@ -34,4 +34,4 @@
 
 * PL 变量、参数或函数返回类型
 
-有关自定义类型的详细信息，请参考 [PL 参考](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.1/pl-introduction-1)。
+有关自定义类型的详细信息，请参考 [PL 参考（Oracle 模式）](../../../../3.pl-reference/3.pl-oracle/2.data-type-oracle/5.user-defined-data-types-oracle.md)。
