--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md
@@ -50,13 +50,12 @@ column_name_list:
 | length          | 对于字符串列，可以使用 `col_name(length)` 语法截取字符串的部分用于创建索引。 支持的数据类型有 `CHAR`、`VARCHAR`、`BINARY` 与 `VARBINARY`。              |
 | index_type      | 索引类型，只支持 `USING BTREE`，表示使用 B-Tree 索引。                                                                                          |
 | UNIQUE          | 指定为唯一索引。                                                                                                                        |
-| STORING        | 创建索引时，指定索引表上的冗余列。                                                                                                                                 |
 | index_option    | 指定索引选项，多个 `index_option` 以空格分隔。                                                                                                 |
 | GLOBAL \| LOCAL | 指定该索引是全局索引或局部索引，默认是 `LOCAL`。                                                                                                    |
 | COMMENT         | 指定注释。                                                                                                                           |
 | COMPRESSION     | 指定压缩算法。                                                                                                                         |
 | BLOCK_SIZE      | 指定微块大小。                                                                                                                         |
-| STORING         | 表示索引表中冗余存储某些列，以提高系统查询性能。                                                                                                        |
+| STORING         | 创建索引时，指定索引表上的冗余列，以提高系统查询性能。                                                                                                        |
 
 ## 示例
 
