--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/5.generated-column-operations-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/5.generated-column-operations-of-mysql-mode.md
@@ -55,7 +55,7 @@ Query OK, 0 rows affected
 添加 `VIRTUAL` 列的语法如下：
 
 ```sql
-ALTER TABLE table_name MODIFY COLUMN column_name INT GENERATED ALWAYS AS
+ALTER TABLE table_name ADD COLUMN column_name INT GENERATED ALWAYS AS
      (column_expression) VIRTUAL;
 ```
 
@@ -75,7 +75,7 @@ ALTER TABLE table_name MODIFY COLUMN column_name INT GENERATED ALWAYS AS
      (column_expression) VIRTUAL;
 ```
 
-添加 `VIRTUAL` 列的示例如下：
+修改 `VIRTUAL` 列的示例如下：
 
 ```sql
 obclient> ALTER TABLE t1 MODIFY COLUMN c3 INT GENERATED ALWAYS AS (c1 + 11) VIRTUAL;
